use event emitter on low stock instead
