# src/index.ts
@@ -2,6 +2,7 @@
 import express, { Express, Request, Response } from "express";
 import dotenv from "dotenv";
 import orderRoute from "./routes/order"; // Import the orderRoute from the correct path
+import resetRoute from "./routes/reset"; // Import the resetRoute
 import cors from "cors";
 import morgan = require("morgan");
 dotenv.config();
@@ -10,12 +11,13 @@ const app: Express = express();
 const port = process.env.PORT || 3000;
 
 app.use(express.json());
-app.use(cors())
-app.use(morgan('dev')); 
+app.use(cors());
+app.use(morgan("dev"));
 app.get("/", (req: Request, res: Response) => {
   res.send("Express + TypeScript Server");
 });
 
+app.use("/api/reset", resetRoute);
 app.use("/api/order", orderRoute); // Use the orderRoute for the /api/order route
 
 app.listen(port, () => {
