# src/routes/reset.ts
@@ -1,0 +1,8 @@
+import express, { Router } from "express";
+import reset from "../controllers/resetController";
+
+const router: Router = express.Router();
+
+router.post("/", reset);
+
+export default router;
